move increase requests logic to the api + update inference notebook

--- a/api/inference.ipynb
+++ b/api/inference.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
+    "from transformers import BertModel\n",
+    "from transformers import BertTokenizer\n",
     "from torch import nn\n",
-    "from transformers import BertTokenizer, BertModel"
+    "import torch"
    ]
   },
   {
@@ -18,36 +19,35 @@
    "outputs": [],
    "source": [
     "class BERTBadWordClassifier(nn.Module):\n",
-    "  def __init__(self, bert_model_name, num_classes):\n",
+    "  def __init__(self):\n",
     "    super(BERTBadWordClassifier, self).__init__()\n",
-    "    self.bert = BertModel.from_pretrained(bert_model_name)\n",
+    "    self.bert_model_name = \"bert-base-cased\"\n",
+    "    self.num_classes = 2\n",
+    "    self.bert = BertModel.from_pretrained(self.bert_model_name)\n",
+    "    self.tokenizer = BertTokenizer.from_pretrained(self.bert_model_name)\n",
+    "    self.device = torch.device(\"mps\" if torch.backends.mps.is_built() else \"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    self.dropout = nn.Dropout(0.1)\n",
-    "    self.fc = nn.Linear(self.bert.config.hidden_size, num_classes)\n",
+    "    self.fc = nn.Linear(self.bert.config.hidden_size, self.num_classes)\n",
+    "    self.load_state_dict(torch.load('classifier.pth', map_location=self.device))\n",
+    "    self.to(self.device)\n",
     "\n",
     "  def forward(self, input_ids, attention_mask):\n",
     "    outputs = self.bert(input_ids=input_ids, attention_mask=attention_mask)\n",
     "    pooled_output = outputs.pooler_output\n",
     "    x = self.dropout(pooled_output)\n",
     "    logits = self.fc(x)\n",
-    "    return logits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predict_bad_word(text, model, tokenizer, device, max_length=128):\n",
-    "    model.eval()\n",
-    "    encoding = tokenizer(text, return_tensors='pt', max_length=max_length, padding='max_length', truncation=True).to(device)\n",
+    "    return logits\n",
+    "  \n",
+    "  def predict_bad_word(self, text, max_length=128):\n",
+    "    self.eval()\n",
+    "    encoding = self.tokenizer(text, return_tensors='pt', max_length=max_length, padding='max_length', truncation=True).to(self.device)\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        outputs = model(input_ids=encoding['input_ids'], attention_mask=encoding['attention_mask'])\n",
+    "        outputs = self.forward(input_ids=encoding['input_ids'], attention_mask=encoding['attention_mask'])\n",
     "        probs = torch.nn.functional.softmax(outputs, dim=1)\n",
     "        pred = torch.argmax(probs, dim=1).item()\n",
     "\n",
-    "    return (\"bad\" if pred == 1 else \"nice\", probs[0][pred].item())\n"
+    "    return pred, probs[0][pred].item()"
    ]
   },
   {
@@ -56,21 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bert_model_name = \"bert-base-cased\"\n",
-    "num_classes = 2\n",
-    "max_length = 128"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"mps\" if torch.backends.mps.is_built() else \"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "tokenizer = BertTokenizer.from_pretrained(bert_model_name)\n",
-    "model = BERTBadWordClassifier(bert_model_name, num_classes).to(device)\n",
-    "model.load_state_dict(torch.load('./api/model/classifier.pth', map_location=device))"
+    "model = BERTBadWordClassifier()"
    ]
   },
   {
@@ -89,7 +75,7 @@
     "]\n",
     "\n",
     "for test_text in test_texts:\n",
-    "  prediction, score = predict_bad_word(test_text, model,  , device)\n",
+    "  prediction, score = model.predict_bad_word(test_text)\n",
     "  print(test_text)\n",
     "  print(f'Prediction: {prediction} {score}\\n')"
    ]
